test/Fail/Issue2247.err
Issue2247.agda:19.11-15: error: [UnequalTerms]
The terms
  M1.x a
and
  a
are not equal at type A
when checking that the expression refl has type M1.x ≡ (λ a → a)
